# Checkers

./: CMakeLists.txt  main.cpp
.github/workflows/: cmake.yml
design/: checkersuml.qmodel
domain/: CMakeLists.txt  Checker.h
frontend/: CMakeLists.txt  IFrontend.h
frontend/GUI/: CMakeLists.txt  Controller.cpp  Controller.h  GUIFrontendFactory.cpp  GUIFrontendFactory.h  GUIViewFactory.cpp  GUIViewFactory.h  GuiResources.qrc
frontend/GUI/model/: ViewModel.cpp  ViewModel.h
frontend/GUI/ui/: CMakeLists.txt
frontend/GUI/ui/Board/: Board.h  BoardCellDelegate.cpp
frontend/GUI/ui/MainWindow/: MainWindow.h  MainWindow.ui  mainwindow.cpp
frontend/GUI/ui/SelectMissionPlan/: CMakeLists.txt  SelectMissionPlan.cpp  SelectMissionPlan.h  SelectMissionPlan.ui
src/: CMakeLists.txt  main.cpp  unit_test_main.cpp
src/application/: ApplicationFactory.cpp  ApplicationFactory.h  CMakeLists.txt
src/application/adapters/: CMakeLists.txt  LocalAdapter.cpp  LocalAdapter.h
src/application/core/: CMakeLists.txt  Game.cpp  Game.h  GameObserver.h  IGame.cpp  IGame.h  IPlayer.cpp  IPlayer.h  Lobby.cpp  Lobby.h
src/communication/: CMakeLists.txt  HTTPAdapter.h  IAdapter.h
src/domain/: Board.h  CMakeLists.txt  Checker.cpp  Checker.h  CheckerFactory.cpp  CheckerFactory.h  Position.cpp  Position.h
src/frontend/: CMakeLists.txt  IFrontend.cpp  IFrontend.h
src/frontend/GUI/: Controller.cpp  Controller.h  GUIFrontendFactory.cpp
src/frontend/GUI/model/: CMakeLists.txt  ViewModel.cpp  ViewModel.h
src/frontend/GUI/ui/: CMakeLists.txt
src/frontend/GUI/ui/Board/: Board.cpp  Board.h  BoardCellDelegate.cpp  BoardCellDelegate.h  CMakeLists.txt
src/frontend/GUI/ui/MainWindow/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  mainwindow.cpp
src/frontend/adapters/: CMakeLists.txt  LocalAdapter.cpp  LocalAdapter.h
src/test/: CMakeLists.txt
src/test/application/: CMakeLists.txt  GameTest.cpp  MockGameObserver.h
src/test/domain/: CMakeLists.txt  MockCheckerFactory.h  PositionTest.cpp
src/test/frontend/: CMakeLists.txt  IFrontendMock.h
src/test/frontend/GUI/: BoardCellDelegateTest.cpp  CMakeLists.txt  ViewModelTest.cpp
src/test/frontend/adapters/: CMakeLists.txt  LocalAdapterTest.cpp
